# oz_django_duckbae

./: manage.py  pyproject.toml  test.py
github/workflows/: ci.yml
oz_django/: asgi.py  settings.py  urls.py  wsgi.py
